# Blockchain_Class_Idea_execution

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  tasks.py
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: db.py  deps.py  main.py  models.py  schemas.py  settings.py  web3_client.py
backend/app/auth/: routes.py  siwe.py
backend/app/graders/: base.py  ethernaut.py
backend/app/routes/: assignments.py  health.py  submissions.py
backend/scripts/: run_grader_cli.py  seed_dev_data.py  seed_ethernaut_map.py
backend/tests/: test_ethernaut_grader.py
docs/: grader_assignment_2_ethernaut.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  wagmi.ts
frontend/src/auth/: ProtectedRoute.tsx  SignIn.tsx  buildSiweMessage.ts  useSession.ts
frontend/src/pages/: Profile.tsx  ProfilePage.tsx  SignInPage.tsx
frontend/src/styles/: App.module.css  Profile.module.css
